--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 .heading-primary {
   color: #fff;
+  margin-bottom: 20px;
 }
 .heading-primary-main {
   font-size: 60px;
@@ -70,4 +72,48 @@ body {
   font-size: 30px;
   display: block;
   letter-spacing: 17px;
+}
+
+.btn:visited,
+.btn:link {
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 100px;
+  font-size: 19px;
+  display: inline-block;
+  transition: all 0.2s;
+  position: relative;
+  padding: 15px 40px;
+}
+
+.btn-white {
+  background-color: white;
+  color: #777;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+}
+
+.btn:active {
+  transform: (-1px);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.btn::after {
+  background-color: white;
+  content: "";
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  color: white;
+  display: inline-block;
+  border-radius: 100px;
+  position: absolute;
+  z-index: -1;
+  transition: all 0.2s;
+}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.5);
+  opacity: 0.1;
 }
