--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,89 @@
+@keyframes moveInLeft {
+  0% {
+    transform: translateX(-100px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    transform: translateX(0px); } }
+
+@keyframes moveInRight {
+  0% {
+    transform: translateX(100px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    transform: translateX(0px); } }
+
+@keyframes moveInUp {
+  0% {
+    transform: translateY(8px); }
+  100% {
+    transform: translateY(-5px); }
+  100% {
+    transform: translateY(0px); } }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+/*
+
+global font-size resize
+*/
+html {
+  font-size: 62.5%; }
+
+/*
+
+this is the best place properties we want other element to inherit
+*/
+body {
+  font-family: "lato", sans-serif;
+  line-height: 1.7;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #fff;
+  padding: 1rem;
+  box-sizing: border-box; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.9)), url("../img/nature.jpg");
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 75vh, 0% 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  .header-primary {
+    color: #fff;
+    margin-bottom: 2rem; }
+  .header .heading-primary--main {
+    font-size: 6rem;
+    display: block;
+    letter-spacing: 3.5rem;
+    font-weight: 400;
+    animation: moveInLeft 2s ease-in-out; }
+  .header .heading-primary--sub {
+    font-size: 2rem;
+    display: block;
+    letter-spacing: 1.7rem;
+    font-weight: 700;
+    animation: moveInRight 2s ease-in-out; }
+
 /*
 colors
 
@@ -7,98 +93,33 @@ dark green: #28b485;
 
 
 */
-
 /*
 
 universal selecor and global reset: this is done to removing all padding and margin thta comes with some element like h1 element. we 
 just want to start clean
 */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/*
-
-this is the best place properties we want other element to inherit
-*/
-body {
-  font-family: "lato", sans-serif;
-  line-height: 1.7;
-  font-size: 16px;
-  font-weight: 400;
-  color: #777;
-  padding: 10px;
-}
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right, #7ed56fb4, #28b4858d),
-    url("../img/nature.jpg");
-  background-position: top;
-  background-size: cover;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 75vh, 0% 100%);
-  position: relative;
-}
-
-.logo-box {
-  position: absolute;
-  top: 40px;
-  left: 40px;
-}
-.logo {
-  height: 50px;
-}
-
-.text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.heading-primary {
-  color: #fff;
-  margin-bottom: 20px;
-}
-.heading-primary-main {
-  font-size: 60px;
-  display: block;
-  letter-spacing: 35px;
-}
-.heading-primary-sub {
-  font-size: 30px;
-  display: block;
-  letter-spacing: 17px;
-}
-
-.btn:visited,
-.btn:link {
+.btn:visited, .btn:link {
   text-decoration: none;
   text-transform: uppercase;
-  border-radius: 100px;
-  font-size: 19px;
+  border-radius: 10rem;
+  font-size: 1.9rem;
   display: inline-block;
   transition: all 0.2s;
   position: relative;
-  padding: 15px 40px;
-}
+  padding: 1.5rem 4rem;
+  animation: moveInUp 2s ease-in-out; }
 
-.btn-white {
+.btn--white {
   background-color: white;
-  color: #777;
-}
+  color: #777; }
 
 .btn:hover {
-  transform: translateY(-3px);
-}
+  transform: translateY(-3px); }
 
 .btn:active {
-  transform: (-1px);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-}
+  transform: -1px;
+  box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
 .btn::after {
   background-color: white;
   content: "";
@@ -108,12 +129,11 @@ body {
   left: 0;
   color: white;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   z-index: -1;
-  transition: all 0.2s;
-}
+  transition: all 0.2s; }
+
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.5);
-  opacity: 0.1;
-}
+  opacity: 0.1; }
