--- a/css/style.css
+++ b/css/style.css
@@ -45,59 +45,43 @@ body {
   line-height: 1.7;
   font-size: 1rem;
   font-weight: 400;
-  color: #fff;
+  color: #777;
   padding: 1rem;
   box-sizing: border-box; }
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.9)), url("../img/nature.jpg");
-  background-position: top;
-  background-size: cover;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 75vh, 0% 100%);
-  position: relative; }
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 5rem; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-  .header-primary {
-    color: #fff;
-    margin-bottom: 2rem; }
-  .header .heading-primary--main {
-    font-size: 6rem;
-    display: block;
-    letter-spacing: 3.5rem;
-    font-weight: 400;
-    animation: moveInLeft 2s ease-in-out; }
-  .header .heading-primary--sub {
-    font-size: 2rem;
-    display: block;
-    letter-spacing: 1.7rem;
-    font-weight: 700;
-    animation: moveInRight 2s ease-in-out; }
+.heading-primary--main {
+  font-size: 6rem;
+  display: block;
+  letter-spacing: 3.5rem;
+  font-weight: 400;
+  animation: moveInLeft 2s ease-in-out;
+  color: #fff; }
 
-/*
-colors
+.heading-primary--sub {
+  font-size: 2rem;
+  display: block;
+  letter-spacing: 1.7rem;
+  font-weight: 700;
+  animation: moveInRight 2s ease-in-out;
+  color: #fff; }
 
-light green: #7ed56f;
-medium green: #55c57a;
-dark green: #28b485;
+.heading-secondary {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  font-weight: 700;
+  display: inline-block;
+  text-align: center;
+  background-image: linear-gradient(to right, #55c57a, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: skewY(5deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
+.u-center-text {
+  text-align: center; }
 
-*/
-/*
-
-universal selecor and global reset: this is done to removing all padding and margin thta comes with some element like h1 element. we 
-just want to start clean
-*/
 .btn:visited, .btn:link {
   text-decoration: none;
   text-transform: uppercase;
@@ -137,3 +121,70 @@ just want to start clean
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.5);
   opacity: 0.1; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.9)), url("../img/nature.jpg");
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 75vh, 0% 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  .header-primary {
+    color: #fff;
+    margin-bottom: 2rem; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto;
+  background-color: #eee; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    background-color: red;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * (6rem)) / 3); }
+  .row .col-2-of-3 {
+    width: calc( 2 * ((100% - 2 * (6rem)) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * (6rem)) / 4); }
+
+/*
+colors
+
+light green: #7ed56f;
+medium green: #55c57a;
+dark green: #28b485;
+
+
+*/
+/*
+
+universal selecor and global reset: this is done to removing all padding and margin thta comes with some element like h1 element. we 
+just want to start clean
+*/
