--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,11 @@
 $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
-$color-style-color: #fff;
+$color-style-header: #fff;
+$color-gray-light-1: #f7f7f7;
+$color-style-color: #777;
+$color-black: #000;
+
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
