--- a/sass/base/_topography.scss
+++ b/sass/base/_topography.scss
@@ -4,6 +4,7 @@
   letter-spacing: 3.5rem;
   font-weight: 400;
   animation: moveInLeft 2s ease-in-out;
+  color: $color-style-header;
 }
 .heading-primary--sub {
   font-size: 2rem;
@@ -11,4 +12,26 @@
   letter-spacing: 1.7rem;
   font-weight: 700;
   animation: moveInRight 2s ease-in-out;
+  color: $color-style-header;
+}
+
+.heading-secondary {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  font-weight: 700;
+  display: inline-block;
+  text-align: center;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(5deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
 }
