--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -4,7 +4,7 @@
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 10rem;
-    font-size: 1.9rem;
+    font-size: $default-font-style;
     display: inline-block;
     transition: all 0.2s;
     position: relative;
@@ -42,5 +42,28 @@
   &:hover::after {
     transform: scaleX(1.4) scaleY(1.5);
     opacity: 0.1;
+  }
+}
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-style;
+    text-decoration: none;
+    color: $color-primary-light;
+    display: inline-block;
+    border-bottom: 1px solid $color-primary-dark;
+    padding: 5px;
+    margin: 20px;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    color: #fff;
+    background-color: $color-primary-light;
+    transform: translateY(-2px);
+  }
+  &:active {
+    transform: translateY(0px);
+    box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
 }
