--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $color-gray-light-1: #f7f7f7;
 $color-style-color: #777;
 $color-black: #000;
 
+//font
+$default-font-style: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
