--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,12 @@ $color-gray-light-1: #f7f7f7;
 $color-style-color: #777;
 $color-black: #000;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-textiary-light: #2998ff;
+$color-textiary-dark: #5643fa;
+
 //font
 $default-font-style: 1.6rem;
 $grid-width: 114rem;
