--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/utilies";
 
 @import "components/buttons";
+@import "components/card";
 @import "layout/header";
 
 @import "pages/home";
