--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,23 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-feature {
+  background-image: linear-gradient(
+    to right,
+    rgba($color-primary, 0.8),
+    rgba($color-primary-dark, 0.8)
+  );
+  background-size: cover;
+  height: 10rem;
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
+}
+
+.section-tour {
+  padding: 25rem 0 50rem 0;
+  background-color: $color-gray-light-1;
+}
