--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 
 @import "components/buttons";
 @import "components/card";
+@import "components/popup";
 @import "layout/header";
 
 @import "pages/home";
